finish thin-lens camera notes

--- a/pbrt/3.2 Rounding Error of Float-Point Arithmetic.md
+++ b/pbrt/3.2 Rounding Error of Float-Point Arithmetic.md
@@ -156,7 +156,7 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 对应的浮点运算为，
 
- 								$\begin{align} x' &=x\otimes r \oslash sqrt((x\otimes x)\oplus (y\otimes y)\oplus(z\otimes z)) \\ &\subset \frac{xr(1\pm \epsilon_m)^2}{\sqrt{x^2(1\pm \epsilon_m)^3+y^2(1\pm \epsilon_m)^3+z^2(1\pm \epsilon_m)^2}(1\pm \epsilon_m)} \\ &\subset \frac{xr(1\pm \gamma_2)}{\sqrt{x^2(1\pm \gamma_3)+y^2(1\pm \gamma_3)+z^2(1\pm \gamma_2)}(1\pm \gamma_1)} \\&\subset \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)(1\pm  \gamma_4)}(1\pm \gamma_1)} \\ &= \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)}\sqrt{(1\pm \gamma_4)}(1\pm \gamma_1)} \\ &\subset \frac{xr}{\sqrt{(x^2+y^2+z^2)}}(1\pm \gamma_5) \\ &= x'(1\pm \gamma_5) \end{align}$
+$$\begin{align} x' &=x\otimes r \oslash sqrt((x\otimes x)\oplus (y\otimes y)\oplus(z\otimes z)) \\ &\subset \frac{xr(1\pm \epsilon_m)^2}{\sqrt{x^2(1\pm \epsilon_m)^3+y^2(1\pm \epsilon_m)^3+z^2(1\pm \epsilon_m)^2}(1\pm \epsilon_m)} \\ &\subset \frac{xr(1\pm \gamma_2)}{\sqrt{x^2(1\pm \gamma_3)+y^2(1\pm \gamma_3)+z^2(1\pm \gamma_2)}(1\pm \gamma_1)} \\&\subset \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)(1\pm  \gamma_4)}(1\pm \gamma_1)} \\ &= \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)}\sqrt{(1\pm \gamma_4)}(1\pm \gamma_1)} \\ &\subset \frac{xr}{\sqrt{(x^2+y^2+z^2)}}(1\pm \gamma_5) \\ &= x'(1\pm \gamma_5) \end{align}$$
 
 因此，投影点的 $x$ 坐标的绝对误差由 $\gamma_5|x'|$ 界定，每个维度不会超过 2.5 个ulps的误差
 
