write transformation and some practical tricks

--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/1. Vulkan Miscs.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/1. Vulkan Miscs.md
@@ -6,7 +6,7 @@
 
 Vulkan 是右手系坐标系，这与 OpenGL 不同，OpenGL 是左手系坐标系。如下图所示
 
-![image-20211102110202445](1. Vulkan Coordinates.assets/image-20211102110202445.png)
+![image-20211102110202445](1. Vulkan Miscs.assets/image-20211102110202445.png)
 
 <center>左为 OpenGL 坐标系，右为 Vulkan 坐标系</center>
 
