update some math equations; write some notes about glsl and glm

--- a/text-notes/pbrt/6. thin-lens for depth of filed.md
+++ b/text-notes/pbrt/6. thin-lens for depth of filed.md
@@ -64,13 +64,17 @@ thin-lens 是透镜(凸透镜)中的简化模型，thin 表示忽略透镜的厚
 
 图中 $d_c$ 为弥散圆直径，$d_l$ 为透镜直径，由相似三角形可列
 
-​									$$\frac{d_l}{z'}=\frac{d_c}{|z'-z_f'|}$$
-
-解得 	$d_c= |\frac{d_l(z'-z_f')}{z'}|$
-
+$$
+\begin{align}
+\frac{d_l}{z'}&=\frac{d_c}{|z'-z_f'|} \\
+d_c&= |\frac{d_l(z'-z_f')}{z'}|
+\end{align}
+$$
 应用 Gaussian lens equation，消去未知量 $z',z_f'$，有
 
-​									$$d_c= |\frac{d_lf(z-z_f)}{z(f+zf)}|$$
+$$
+d_c= |\frac{d_lf(z-z_f)}{z(f+zf)}|
+$$
 
 ### 3. depth-of-field
 
