write pbr material document, disney principle; write srgb, snorm and unorm introduction

--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/3. GLM Miscs.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/3. GLM Miscs.md
@@ -4,7 +4,15 @@
 
 ### GLM Quaternion GLSL
 
-#### 1. 四元数的累积
+#### 1. 四元数的构建
+
+向量 v 作为旋转轴，绕轴旋转 angle 弧度，有四元数
+
+```c++
+glm::qua<float> rot(v*angle);
+```
+
+#### 2. 四元数的累积
 
 ```c++
 glm::qua<float> first_rotation = ...;
@@ -12,7 +20,7 @@ glm::qua<float> second_rotation = ...;
 glm::qua<float> accumulat_rotation = second_rotation*first_rotation;
 ```
 
-#### 2. 四元数旋转向量
+#### 3. 四元数旋转向量
 
 ```c++
 glm::qua<float> cameraRotation = ...;	// 相机的旋转，正向变换表示从世界坐标系到相机坐标系
