--- a/text-notes/graphic basics/1. Transformations.md
+++ b/text-notes/graphic basics/1. Transformations.md
@@ -1,4 +1,4 @@
-### Summary
+## Summary
 
 本文介绍投影变换的计算，包括正交投影、透视投影。最后介绍一些实际应用中的技巧、以及如何运用到 Vulkan 坐标系。
 
@@ -8,11 +8,11 @@
 
 其中 $l,r$ 为 $x$ 轴方向的左右表面到视锥体中心的距离，$b,t$ 为 $y$ 轴方向的上下表面到视锥体中心的距离，$n,f$ 为 $z$ 轴方向的前后表面到原点的距离(即近平面与远平面)。相机坐标系采用 Vulkan 的右手坐标系。
 
-### Orthographic Projection
+## Orthographic Projection
 
 正交投影将 $(-l,r)\cross(-b,t)\cross(-n,-f)$ 的视锥体变换为 $(-1,1)\cross(-1,1)\cross(0,1)$。注意：通常情况下正交投影的视锥体定义为关于 $z$ 轴对称，即 $l=r,b=t$，在本文最后结果对应替换即可。正交投影的过程可分为两步：先将视锥体近平面的中心平移至相机坐标系的原点；再将大小进行缩放。
 
-#### 1. 视锥体近平面的中心平移至原点
+### 1. 视锥体近平面的中心平移至原点
 
 视锥体近平面中心坐标为 $\large \left(\frac{r-l}{2},\frac{t-b}{2},-n\right)$，因此构建平移矩阵
 $$
@@ -27,7 +27,7 @@ $$
 
 > 验证一下：对于左右表面的 $x$ 坐标，左表面 $x$ 坐标变换前 $-l$，有 $-l+\frac{l-r}{2}=\frac{-l-r}{2}$ ；右表面 $x$ 坐标变换前 $r$，有 $r+\frac{l-r}{2}=\frac{l+r}{2}$ 。变换后的 $x$ 坐标对称。
 
-#### 2. frustum 进行缩放
+### 2. frustum 进行缩放
 
 经过平移后的视锥体为 $\large (\frac{-l-r}{2},\frac{l+r}{2})\cross(\frac{-b-t}{2},\frac{b+t}{2})\cross( 0,n-f)$，将平移后的视锥体缩放为   									   $(-1,1)\cross(-1,1)\cross(0,1)$，构建缩放矩阵
 $$
@@ -44,7 +44,7 @@ $$
 M_{ortho} = M_{orthoS} \cdot M_{orthoT}
 $$
 
-### Perspective Projection
+## Perspective Projection
 
 透视投影为了模拟现实中近大远小，采用截去头部的金字塔形状的 frustum，如下图所示
 
@@ -54,9 +54,9 @@ $$
 
 求解透视投影的投影矩阵可以分为两步：将透视投影的视锥体变形为正交投影的视锥体；再进行正交投影变换。
 
-#### 1. frustum 视锥体挤压为长方体视锥体
+### 1. frustum 视锥体挤压为长方体视锥体
 
-##### 1.1 一般情况推导出变换矩阵的部分元素
+#### 1.1 一般情况推导出变换矩阵的部分元素
 
 将 frustum 远平面四个角进行挤压，将远平面变形为与近平面一样大小。假设变形前 frustum 内任一点为 $(x,y,z)$，变形为 $(x',y',z')$ 。变换前后的点有如下关系:
 
@@ -94,7 +94,7 @@ M_{persp->ortho}=
 \end{pmatrix}
 $$
 
-###### 1.2 代入特殊点得到未知的 $z$ 坐标变换
+#### 1.2 代入特殊点得到未知的 $z$ 坐标变换
 
 虽然任意点的 $z$ 坐标变换前后的对应关系不能直观看出，但是对于在近平面和远平面上的点，其 $z$ 坐标变换前后不改变，因此有 $z'=z=-n$。代入近平面，将 $z'=z=-n$ 代入得到变换前的点有 $(x,y,-n,1)$，变换后的点有 $(-nx,-ny,n^2,-n)$。因此有 
 $$
@@ -123,7 +123,7 @@ M_{persp->ortho}=
 \end{pmatrix}
 $$
 
-#### 2. 完整的投影变换矩阵
+### 2. 完整的投影变换矩阵
 
 $$
 \begin{align} M_{persp} &= M_{ortho}\cdot M_{persp->ortho}=M_{orthoS} \cdot M_{orthoT}\cdot M_{persp->ortho} \\
@@ -148,7 +148,7 @@ $$
 \end{align}
 $$
 
-#### 3. 透视投影非线性
+### 3. 透视投影非线性
 
 透视投影具有非线性的性质，其非线性是由于最后的齐次坐标**除以 $w$ 分量 (divide z)** 引入的。这里我们只需关注 $w$ 分量的变换操作，因此只需关注透视投影矩阵变换的第四行。对于原坐标 $(x,y,z,1)$，经过透视变换后的 $w$ 分离由 $1$ 变为 $z$，即变换后的点为 $(x',y',z',z)$。
 
@@ -162,13 +162,13 @@ $$
 
 为了解决透视投影带来的非线性问题，插值引入了 [perspective-correct interpolation](https://www.comp.nus.edu.sg/~lowkl/publications/lowk_persp_interp_techrep.pdf)，目前 vertex shader 到 pixel shader 的变量，默认都为 perspective-correct interpolation。
 
-### Practical Tricks 
+## Practical Tricks 
 
-#### 1. $w$ 分量归一化与 divide z
+### 1. $w$ 分量归一化与 divide z
 
 在 shader 中，对坐标进行透视投影后进行齐次坐标 $w$ 分量归一化时，除以 $w$ 和除以 $z$ 分量都一样，因为透视投影得到的 $w$ 分量与变换前的 $z$ 坐标相等。
 
-#### 2.屏幕空间的像素坐标到相机空间的逆变换
+### 2.屏幕空间的像素坐标到相机空间的逆变换
 
 在某些算法中，经常需要从屏幕像素坐标恢复到相机空间的坐标。
 
