--- a/text-notes/ogre/1. Scene Graph Design.md
+++ b/text-notes/ogre/1. Scene Graph Design.md
@@ -2,15 +2,29 @@
 
 ### Hierarchy Design
 
-屏幕上的所有物体以树形层级结构组织，树的结点父类，虚基类 ```Ogre::Node``` ，其中一个子类 ```Ogre::SceneNode``` 用来组织场景中物体，实际的物体可以 attach 到 ```SceneNode``` 上。
+场景里的所有物体以树形层级结构组织，树的结点父类，虚基类 ```Ogre::Node``` ，其中一个子类 ```Ogre::SceneNode``` 用来组织场景中物体，实际的物体可以 attach 到 ```SceneNode``` 上。```SceneNode``` 用来组织场景里物体的逻辑结构，其包含场景中物体的树形层级关系以及层级 transformation 信息，包括位置、缩放、旋转等。
 
-可以 attach 到 ```SceneNode``` 的类型为虚基类 ```Ogre::MovableObject``` 的子类，包括 Entity objects, Camera objects, Light objects,  ParticleSystem objects 等等。
+场景中物体实体通过 attach 到 ```SceneNode``` 加入场景中，物体实体都为虚基类 ```Ogre::MovableObject``` 的子类，包括 Entity objects, Camera objects, Light objects,  ParticleSystem objects 等等。这些实体持有真正的视觉相关的资源与属性。
 
 ### ```SceneNode``` 的实体 ```MovableObject```
 
 | ```MovableObject``` 子类 | 说明                                                         |
 | ------------------------ | ------------------------------------------------------------ |
-| ```Ogre::Entity```       | 持有实际的渲染资源，如 mesh、顶点数据、材质等。表示一个独立的物体，持有完整的 ```Mesh``` 。对于复杂物体，会有 ```SubEntity``` 结构，并且每个 ```SubEntity``` 持有一个 ```SubMesh``` |
+| ```Ogre::Entity```       | 表示一个独立的复杂物体。复杂物体可能拥有多种材质，```Ogre::Entity``` 将复杂物体划分为多个只具有一种材质的简单物体，即 ```Ogre::SubEntity``` 。 ```Ogre::SubEntity``` 持有实际的渲染资源，如 mesh、顶点数据、材质等。注意  ```Ogre::SubEntity``` 只封装了渲染资源，并不是 ```MovableObject``` 的子类。 |
 | ```Ogre::Light```        | 持有光源的各种参数，以及碰撞体等几何属性                     |
 | ```Ogre::Frustum```      | 平截头体，作为相机的父类，可定义透视投影以及正交投影的平截头体 |
+
+### raw 渲染资源
+
+```Ogre::Entity``` 表示一个由一组简单物体组成的复杂物体，其持有对复杂物体整体表示的属性。简单物体指只具有一种材质效果的物体，由 ```Ogre::SubEntity``` 持有其实际的渲染资源，如 mesh 数据、材质等。
+
+#### 1. mesh 资源
+
+```Ogre::Entity``` 根据材质将复杂物体划分为简单物体 ```Ogre::SubEntity```。同样地，```Ogre::Mesh``` 根据材质将复杂 mesh 划分为一组简单 mesh  ```Ogre::SubMesh```，即同一材质的顶点数据划分为一个 SubMesh。```Ogre::Mesh``` 持有所有 ```Ogre::SubMesh``` 共享的 vertex buffer 和 index buffer，每个 SubMesh 都指向其中的一部分数据区域。
+
+- ```Ogre::Entity``` 组织一组 ```Ogre::SubEntity```，通过组织一组简单物体得到复杂物体。
+
+- ```Ogre::Mesh``` 是 ```Ogre::Entity``` 的成员之一，通过组织一组简单 mesh ```Ogre::SubMesh```，得到复杂物体```Ogre::Entity``` 的复杂 mesh 。
+
+- ```Ogre::SubMesh``` 是 ```Ogre::SubEntity``` 的成员之一，是其持有的渲染资源中的 mesh 资源。
 
