write document about sample NDF; write document about Jacobian Matrix

--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/2. GLSL Miscs.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/2. GLSL Miscs.md
@@ -12,27 +12,46 @@ texture coordinate 是 [0,1] 的坐标
 
 #### 1. glsl 是列向量
 
-对于线性代数中矩阵的乘法规则，列向量与变换矩阵相乘只能是列向量右乘矩阵，如矩阵(4x4)、列向量(4x1)。但 glsl 由于其存储布局方式的特殊性，向量与矩阵的乘法在形式上并不是这样。
+对于线性代数中矩阵的乘法规则，列向量与变换矩阵相乘只能是列向量右乘矩阵，如矩阵(4x4)、列向量(4x1)。
 
-glsl 的矩阵存储是列优先（列主序）的，例如
+glsl 的矩阵存储是列优先（列主序）的，定义时，**代码形式中的每一行数据是一个列向量**，例如
 
 ```glsl
 const mat4 M = mat4( 
-	0.5, 0.0, 0.0, 0.0,		// 第一列
-	0.0, 0.5, 0.0, 0.0,		// 第二列
-	0.0, 0.0, 1.0, 0.0,		// 第三列
-	0.5, 0.5, 0.0, 1.0 );	// 第四列
-vec4 V = vec4(1.0, 1.0, 1.0, 1.0);
+	x11, x21, x31, x41,		// 第一列
+	x12, x22, x32, x42,		// 第二列
+	x13, x23, x33, x43,		// 第三列
+	x14, x24, x34, x44 );	// 第四列
+vec4 V = vec4(x, y, z, w);
 ```
 
-```M``` 相当于存储的是其转置，数学形式上 $M_{4\cross4}^T*V_{4\cross1}$，在 glsl 中写法为
+```M``` 相当于存储的是代码形式中的矩阵的转置。
+
+#### 2. 向量与矩阵的乘法
+
+glsl 中使用列向量，符合线性代数中列向量矩阵的乘法规则，如下
 
 ```glsl
-vec4 d = V*M;
+vec4 d = M*V;
 // 实际上进行的运算为
 d.x = M[0].x*V.x + M[1].x*V.y + M[2].x*V.z + M[3].x*V.w;
 d.y = M[0].y*V.x + M[1].y*V.y + M[2].y*V.z + M[3].y*V.w;
 d.z = M[0].z*V.x + M[1].z*V.y + M[2].z*V.z + M[3].z*V.w;
 d.w = M[0].w*V.x + M[1].w*V.y + M[2].w*V.z + M[3].w*V.w;
+```
+
+同时，也支持对于相反顺序的乘法，并且等价于 $M^T * V$
+
+```glsl
+vec4 d = V*M;
+// 实际上进行的运算为
+d.x = dot(V, M[0]);
+d.y = dot(V, M[1]);
+d.z = dot(V, M[2]);
+// 相当于 transpose(M)*V
+d.x = M[0].x*V.x + M[0].y*V.y + M[0].z*V.z + M[0].w*V.w;
+d.y = M[1].x*V.x + M[1].y*V.y + M[1].z*V.z + M[1].w*V.w;
+d.z = M[2].x*V.x + M[2].y*V.y + M[2].z*V.z + M[2].w*V.w;
+d.w = M[3].x*V.x + M[3].y*V.y + M[3].z*V.z + M[3].w*V.w;
 ```
 
