--- a/text-notes/graphic basics/1. Projection Transformations.md
+++ b/text-notes/graphic basics/1. Projection Transformations.md
@@ -4,7 +4,7 @@
 
 - Settings：本文的向量采用列向量，与 glm 库的默认为行向量不同，只需将本文描述的公式整体转置即可转为行向量形式；clip 空间的深度值范围采用常见的 $[0,1]$ ；相机 forward 方向为 $-z$，up 方向为 $+y$ 。相机坐标系与正交投影的长方体视锥体 如下图所示：
 
-  <img src="1. Transformations.assets/image-20211125103026931.png" alt="image-20211125103026931" style="zoom: 33%;" />
+  <img src="1. Projection Transformations.assets/image-20211125103026931.png" alt="image-20211125103026931" style="zoom: 33%;" />
 
 其中 $l,r$ 为 $x$ 轴方向的左右表面到视锥体中心的距离，$b,t$ 为 $y$ 轴方向的上下表面到视锥体中心的距离，$n,f$ 为 $z$ 轴方向的前后表面到原点的距离(即近平面与远平面)。相机坐标系采用 Vulkan 的右手坐标系。
 
@@ -48,7 +48,7 @@ $$
 
 透视投影为了模拟现实中近大远小，采用截去头部的金字塔形状的 frustum，如下图所示
 
-![image-20211125194830293](1. Transformations.assets/image-20211125194830293.png)
+![image-20211125194830293](1. Projection Transformations.assets/image-20211125194830293.png)
 
 右图为左图的二维投影，透视投影的 frustum 是通过 fov 参数定义，所以是右图中过原点的情况，其中 $n,f$ 分别是近平面和远平面。
 
@@ -60,7 +60,7 @@ $$
 
 将 frustum 远平面四个角进行挤压，将远平面变形为与近平面一样大小。假设变形前 frustum 内任一点为 $(x,y,z)$，变形为 $(x',y',z')$ 。变换前后的点有如下关系:
 
-<img src="1. Transformations.assets/image-20211125194917924.png" alt="image-20211125194917924" style="zoom:50%;" />
+<img src="1. Projection Transformations.assets/image-20211125194917924.png" alt="image-20211125194917924" style="zoom:50%;" />
 
 朝 $-x$ 方向看去的平面图，可以根据相似三角形有：
 $$
@@ -156,7 +156,7 @@ $$
 
   顶点面片光栅化为像素的插值操作，是以三角面片在像素点的重心坐标为参数进行插值的，这个过程是线性过程。但由于投影变换引入了非线性，在三维空间线性变化的顶点属性，经过投影变换，在屏幕空间并不是线性变化，因此不能直接使用重心坐标进行顶点属性的插值。如下图所示：
 
-  <img src="1. Transformations.assets/image-20211125204304543.png" alt="image-20211125204304543" style="zoom:50%;" />
+  <img src="1. Projection Transformations.assets/image-20211125204304543.png" alt="image-20211125204304543" style="zoom:50%;" />
 
   三维空间的线 $AB$，投影到屏幕空间 $ab$。$ab$ 的中点对应的却不是 $AB$ 的中点。
 
