--- a/text-notes/graphic basics/3. Dsiney Principled BRDF.md
+++ b/text-notes/graphic basics/3. Dsiney Principled BRDF.md
@@ -93,7 +93,7 @@ Disney 设计的 BRDF 具有两个 GTR BRDF lobe：
 
 友好的参数调控交互处理：
 
--  $roughness^2$ 的变化更加线性，因此 UI 调参时，调整的是 $\alpha^2$。
+-  重新定义公式中的 $\alpha$：$\alpha = roughness^2$ 的变化更加线性，因此 UI 调参时，调整的是 $\alpha^{1/2}$。
 - 
 
 各向同性的 GTR 代码
