--- a/text-notes/Sample Algorithm/1. Uniform disk sample.md
+++ b/text-notes/Sample Algorithm/1. Uniform disk sample.md
@@ -8,7 +8,7 @@
 
 这种方式采样的点落在不同采样半径 $r$ 上概率是相同，如 $0.1$ 和 $1.0$ 半径上的采样点，因此会导致采样点在圆内不能均匀分布。越靠外，采样点越稀疏，如下图
 
-<img src=".\Uniform disk sample.assets\16037344-10540b7bb665d790.png" alt="img" style="zoom: 50%;" />
+<img src=".\1. Uniform disk sample.assets\16037344-10540b7bb665d790.png" alt="img" style="zoom: 50%;" />
 
 我们想要达到的均匀分布应该是采样点在面积上均匀分布，即半径 $r$ 的圆内的采样点占采样点总量的比例等于其面积占整个圆面积的比例。 
 
@@ -18,9 +18,15 @@
 
 由采样点落在半径为 $r$ 的圆的概率等于面积之比可列
 
- $P(R\leq r)=\pi r^2/\pi 1^2 \\ P(g(X)\leq r)=P(X \leq g^{-1}(r))=r^2 \\ \int^{g^{-1}(r)}_0 1 dX=g^{-1}(r)=x=r^2 \\ r=g(x)=\sqrt{x}$
- 
+$$
+\begin{align}
+P(R\leq r) &= \pi r^2/\pi 1^2 \\ 
+P(g(X)\leq r) &= P(X \leq g^{-1}(r))=r^2 \\ 
+\int^{g^{-1}(r)}_0 1\space dX &= g^{-1}(r)=x=r^2 \\ 
+r=g(x)=\sqrt{x}
+\end{align}
+$$
 
 因此，我们只需取 $r$ 为 $(0,1)$ 均匀采样的开方，即可实现面积上的均匀采样。如下图
 
-<img src=".\Uniform disk sample.assets\16037344-b98f7a95d913b458.png" alt="img" style="zoom:50%;" />
+<img src=".\1. Uniform disk sample.assets\16037344-b98f7a95d913b458.png" alt="img" style="zoom:50%;" />
