write document about PBR implementation

--- a/text-notes/graphic basics/4. Importance Sample BRDF.md
+++ b/text-notes/graphic basics/4. Importance Sample BRDF.md
@@ -289,7 +289,7 @@ $$
 
 [[3]](#[3]) 通过构造新的坐标系得到 
 $$
-p_\boldsymbol{l}(\boldsymbol{l})=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4\boldsymbol{l}\cdot \boldsymbol{h}}=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4\boldsymbol{v}\cdot \boldsymbol{h}}
+p_\boldsymbol{l}(\boldsymbol{l})=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4(\boldsymbol{l}\cdot \boldsymbol{h})}=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4(\boldsymbol{v}\cdot \boldsymbol{h})}
 $$
 
 
@@ -297,11 +297,11 @@ $$
 
 至此我们已经可以计算 $\eqref{BRDF MC}$ 的积分了，由上述可知 
 $$
-p_{\boldsymbol{l}}(\boldsymbol{l})=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4\boldsymbol{v}\cdot \boldsymbol{h}}=\frac{D(\boldsymbol{h})\cdot \cos\theta_h}{4\boldsymbol{v}\cdot \boldsymbol{h}}
+p_{\boldsymbol{l}}(\boldsymbol{l})=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4(\boldsymbol{v}\cdot \boldsymbol{h})}=\frac{D(\boldsymbol{h})\cdot \cos\theta_h}{4(\boldsymbol{v}\cdot \boldsymbol{h})}
 $$
 $\eqref{BRDF MC}$ 中的 $p(\boldsymbol{l}_k)$ 即为上式的 $p_{\boldsymbol{l}}(\boldsymbol{l})$。假设第 $k$ 次均匀分布采样点为 $(x_k,y_k)\in[0,1]\cross[0,1]$，经过 $\eqref{Blinn Phong Sampled Microface Normal}$ 与 $\eqref{GGX Sampled Microface Normal}$ 可以得到该采样点在 NDF 上对应的微表面法线 $\boldsymbol{h}_k$ ，有：
 $$
-p(\boldsymbol{l}_k)=\frac{D(\boldsymbol{h}_k)\cdot \cos\theta_{h_k}}{4\boldsymbol{v}\cdot \boldsymbol{h}_k}=\frac{D(\boldsymbol{h}_k)\cdot \boldsymbol{h}_k\cdot \boldsymbol{n}}{4\boldsymbol{v}\cdot \boldsymbol{h}_k}
+p(\boldsymbol{l}_k)=\frac{D(\boldsymbol{h}_k)\cdot \cos\theta_{h_k}}{4(\boldsymbol{v}\cdot \boldsymbol{h}_k)}=\frac{D(\boldsymbol{h}_k)\cdot \boldsymbol{h}_k\cdot \boldsymbol{n}}{4(\boldsymbol{v}\cdot \boldsymbol{h}_k)}
 $$
  $\eqref{BRDF MC}$ 中第 $k$ 次采样结果代入上式有，
 $$
