design pattern: Proxy, Decorator; Material System of UE4

--- a/text-notes/graphic basics/1. Projection Transformations.md
+++ b/text-notes/graphic basics/1. Projection Transformations.md
@@ -2,7 +2,7 @@
 
 本文介绍投影变换的计算，包括正交投影、透视投影。最后介绍一些实际应用中的技巧、以及如何运用到 Vulkan 坐标系。
 
-- Settings：本文的向量采用列向量，与 glm 库的默认为行向量不同，只需将本文描述的公式整体转置即可转为行向量形式；clip 空间的深度值范围采用常见的 $[0,1]$ ；相机 forward 方向为 $-z$，up 方向为 $+y$ 。相机坐标系与正交投影的长方体视锥体 如下图所示：
+- Settings：本文的向量采用列向量，与 glm 库的默认为列主序一致，只需将本文描述的公式整体转置即可转为行向量形式；clip 空间的深度值范围采用常见的 $[0,1]$ ；相机 forward 方向为 $-z$，up 方向为 $+y$ 。相机坐标系与正交投影的长方体视锥体 如下图所示：
 
   <img src="1. Projection Transformations.assets/image-20211125103026931.png" alt="image-20211125103026931" style="zoom: 33%;" />
 
@@ -201,38 +201,3 @@ p.z=\frac{-(n+f)z-nf+nz}{n-f}\cdot \frac{1}{z} \\
 z=\frac{-nf}{(n-f)p.z+f}
 $$
 ​			pixel shader 中只需要进行上式对 $z$ 的逆变换，即 **Linearize Depth**。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
