--- a/text-notes/graphic basics/2. Real-Time Physically Based Material Basics.md
+++ b/text-notes/graphic basics/2. Real-Time Physically Based Material Basics.md
@@ -164,7 +164,11 @@ $$
 
 精确的 Fresnel equation 计算非常复杂，通常使用其近似形式——Schlick's 近似。
 $$
-F_R\approx F_{Schlick}=F_0+(1-F_0)(1-\cos\theta)^5, \quad where \quad F_0=\left(\frac{\eta_1-\eta_2}{\eta_1+\eta_2}\right)^2,\cos\theta=\boldsymbol{l}\cdot\boldsymbol{n}
+\begin{align}
+F_R\approx F_{Schlick}&=F_0+(1-F_0)(1-\cos\theta)^5 \\
+&=(1-\cos\theta)^5\cdot 1 + (1-(1-\cos\theta)^5)\cdot F_0\\
+where \quad F_0=&\left(\frac{\eta_1-\eta_2}{\eta_1+\eta_2}\right)^2,\cos\theta=\boldsymbol{l}\cdot\boldsymbol{n}
+\end{align}
 $$
 
 $F_0$ 是沿着法线方向垂直入射时的反射率，当入射方向与法线夹角越来越大时，反射率也随之增大，直至入射方向与法线呈 $90^\circ$ 达到最大，由上式可知，此时为 $1$。上式的含义就是在垂直入射反射率与 grazing 入射反射率(白光) 之间的插值，角度越接近 $90^\circ$，反射率越接近白光。
@@ -233,7 +237,7 @@ $$
 
 <a name="[2]">[2]</a> https://zhuanlan.zhihu.com/p/69380665
 
-<a name="[3]">[3]</a> https://zhuanlan.zhihu.com/p/69380665
+<a name="[3]">[3]</a> https://zhuanlan.zhihu.com/p/81708753
 
 <a name="[4]">[4]</a> [Basic Radiometry](./Basic Radiometry.md)
 
