--- a/text-notes/pbrt/6. thin-lens for depth of filed.md
+++ b/text-notes/pbrt/6. thin-lens for depth of filed.md
@@ -40,13 +40,15 @@ thin-lens 是透镜(凸透镜)中的简化模型，thin 表示忽略透镜的厚
 
 <img src="thin-lens for depth of filed.assets/image-20210525093141317.png" alt="image-20210525093141317" style="zoom:50%;" />
 
-有恒等式：$\frac{1}{z'}-\frac{1}{z}=\frac{1}{f}$
+有恒等式：$\Large \frac{1}{z'}-\frac{1}{z}=\frac{1}{f}$
 
 对于无限远处点，其 $z=\infty$，代入得 $z'=f$ 正好为焦点距透镜的距离
 
 由上式可得，对于深度为 $z$ 的点发出的光，经过透镜得到的汇聚点距透镜的距离 **focus distance**：
 
-​										$$z' = \frac{fz}{f+z}$$
+$$
+z' = \frac{fz}{f+z}
+$$
 
 #### circle of confusion
 
