art resource notes of pbr workflow

--- a/text-notes/Vulkan-develop-notes/PBR Material/1. Practical Tricks of PBR Theory Implementation.md
+++ b/text-notes/Vulkan-develop-notes/PBR Material/1. Practical Tricks of PBR Theory Implementation.md
@@ -122,7 +122,7 @@ $$
 联合上一小节，**使用 GGX NDF 以及可分离 Smith G 的情况下**，可化简 $\eqref{Specular D counter}$ 为：
 $$
 \begin{align}
-& \quad L_i\cdot\frac{ \frac{F \cdot G}{4(\boldsymbol{n}\cdot \boldsymbol{l}_k)(\boldsymbol{n}\cdot \boldsymbol{v})}}{\frac{\cos\theta_h}{4\boldsymbol{v}\cdot \boldsymbol{h}}}\cdot \cos\theta_{l_k} \\
+& \quad L_i\cdot\frac{ \frac{F \cdot G}{4(\boldsymbol{n}\cdot \boldsymbol{l}_k)(\boldsymbol{n}\cdot \boldsymbol{v})}}{\frac{\cos\theta_h}{4(\boldsymbol{v}\cdot \boldsymbol{h})}}\cdot \cos\theta_{l_k} \\
 &=L_i\cdot\frac{F \cdot Smith_v\cdot Smith_l }{\frac{\cos\theta_h}{4\boldsymbol{v}\cdot \boldsymbol{h}}}\cdot \cos\theta_{l_k} \\
 &=L_i\cdot F\cdot Smith_v\cdot Smith_l\cdot \cos\theta_{l_k} \cdot 4(\boldsymbol{v}\cdot \boldsymbol{h}) /\cos\theta_h
 \end{align}
@@ -181,11 +181,40 @@ $$
 \end{align}
 $$
 
+## PBR 材质工作流及其相关资源
 
+PBR 各种数学模型所需要的参数都存储在材质数据中，而不同的工作流涉及的数据不同，同时带来实现上的差异。PBR 材质主流的工作流(workflow) 有两种：**Specular/Glossy** Workflow 和 **Metallic** Workflow。 下面分别介绍以下这两种工作涉及到的资源数据特征。
 
+### 1. Specular/Glossy Workflow
 
+在 Specular/Glossy Workflow 中，Diffuse Map 只影响材质的基础表现颜色，而不会影响到像反射这样的其他材质属性。反射属性是由 Specular Map 控制，包括反射颜色和反射水平。同时又将材质分为两大类：绝缘体(Dielectric)和导体(Metallic)，这两种材质对 Diffuse Map 和 Specular Map 的使用方式如下：
 
+- 对于绝缘体(Dielectric) 材质，材质颜色全都来自 Diffuse Map，Specular Map 的相应部分保持灰度模式。
 
+- 对于导体(Metallic) 材质，材质颜色全部来自 Specular Map，Diffuse Map 的相应部分保持黑色。
+
+### 2. Metallic Workflow
+
+在 Metallic Workflow 中，去掉了绝缘体和导体的概念，使用 BaseColor Map 同时包含 Diffuse Map 和 Specular Map 的信息。Metallic Map 来决定 BaseColor Map 中多少比例作为 Diffuse 输出，多少比例作为 Specular 输出，Metallic 越大的区域具有越多的反射颜色。
+
+## 美术资源的注意事项
+
+- 对于**表示颜色的贴图**，一般都是 SRGB 格式，因为目前显示器通常处于 Gamma 2.2 空间，SRGB 的 Gamma 0.45 空间正好将显示器输出结果转换为线性空间，线性空间更符合人眼感知，因此美术一般都在 SRGB 格式的贴图上操作。这类贴图有 **Specular/Glossy** Workflow 中的 Diffuse Map 和 Specular Map 以及 **Metallic** Workflow 中的 BaseColor Map。
+
+- 对于**存储参数的贴图**，其颜色值没有实际意义，因此直接存储在**线性格式**的贴图中，如 **Metallic** Workflow 中用于存储环境光遮蔽、粗糙度、金属度的 OcclusionRoughMetal 贴图。
+
+- 对于 **Normal Map**，虽然其存储的是 Tangent Space 下的每像素法线信息，看起来与颜色无关，但实际中却将法线先转到颜色空间再存储的。因此 Normal Map 存储的也是颜色，并且法线的颜色具有特殊性。由于 Normal Map 是出于 Tangent Space 中的，因此绝大多数的法线方向与 Tangent Space 的 +z 方向接近，颜色上则呈现偏蓝的颜色。如下图所示：
+
+  <img src="1. Practical Tricks of PBR Theory Implementation.assets/normal_mapping_normal_map.png" alt="Image of a normal map in OpenGL normal mapping" style="zoom: 67%;" />
+  美术会根据法线的这种颜色特征来判断法线的大致方向，因此 Normal Map 中存储的是法线转换到颜色空间的颜色信息，使用的是 **SRGB** 格式。假设某一像素的法线为 $N$，那么转换到颜色空间 $[0,1]$ 有：
+  $$
+  N_c=(1+N)/2
+  $$
+  我们从 Normal Map 直接采样得到的是 $N_c$，还需要将其转换到表示方向向量的空间 $[-1,1]$，才能得到真正的法线
+  $$
+  N=2*N_c-1
+  $$
+  
 
 
 
