notes about importance sampling and ambient occlusion

--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/1. Vulkan Miscs.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/1. Vulkan Miscs.md
@@ -35,6 +35,54 @@ Vulkan 中的数据格式有很多带有 ```SRGB```、```UNORM``` 和 ```SNORM``
 
 
 
+### 3. Flip-Y of Vulkan
+
+由于 Vulkan 坐标系与 OpenGL、DirectX 坐标系 Y 方向相反，这点不同在支持多图形 SDK 时需要对 Vulkan 做额外处理。这里有两种处理：
+
+- 第一种，在 Vertex Shader 中对 Y 坐标取负
+  在对输入顶点进行变换后，对 Y 坐标取负号。如 `gl_Position.y = -gl_Position.y`。可能不止 `gl_Position` 一个输出，顶点变换后的其他的输出也有可能需要 Y 坐标取负号，如变换到 view space、Light space 下的结果。同时，如果如果需要对变换后的顶点进行逆变换，逆变换后还需要进行 Y 坐标取负号。
+- 第二种，使用 VK_KHR_Maintenance1 扩展
+  启用 Vulkan 官方的扩展，可以将 Vulkan 坐标系 Y 轴翻转，和 OpenGl 保持一致。大概做法就是启用扩展 `VK_KHR_Maintenance1 `，viewport 传入负的高度。详细实现查看 [[2]](#[2])。
+
+启用 Flip-Y 后，需要对原 Vulkan 的 Quad 绘制特殊处理。首先 Vulkan 的管线配置中，culling mode 固定为 `VK_CULL_MODE_BACK_BIT` ，front face 固定为 `VK_FRONT_FACE_COUNTER_CLOCKWISE` 。
+
+- 启用 Flip-Y 前的 Quad 绘制
+  ```glsl
+  // vkCmdDraw(cmd_buf, 3, 1, 0, 0);
+  // vertex shader
+  layout(location = 0) out vec2 vTextureCoord;
+  void main() 
+  {
+  	// (0, 0) (0, 2) (2, 0) in screen space
+  	vec2 outUV = vec2(gl_VertexIndex & 2, (gl_VertexIndex << 1) & 2);
+      // (-1, -1, 0, 1) (-1, 3, 0, 1) (3, -1, 0, 1) in clip space
+  	gl_Position = vec4(outUV * 2.0f - 1.0f, 0.0f, 1.0f);
+      // (-1, 1) into (0, 1): 0.5xy+0.5w 
+      vTextureCoord = outUV;
+  }
+  ```
+
+  上述得到的 clip space 下的顶点序列为 $(-1,-1),(-1,3),(3,-1)$ ，在 Vulkan 原坐标系中为逆时针方向，满足管线设定。并且由于 Vulkan 原坐标系 X-Y 轴方向与 texture coordinate 是一致的，因此 UV 坐标可以直接使用 Quad 绘制的顶点坐标。
+
+- 启用 Flip-Y 后的 Quad 绘制
+  ```glsl
+  // vkCmdDraw(cmd_buf, 3, 1, 0, 0);
+  // vertex shader
+  void main() 
+  {
+      // (0, 0) (2, 2) (0, 2) in screen space
+  	vec2 outUV = vec2((gl_VertexIndex << 1) & 2, gl_VertexIndex & 2);
+      // (-1, -1, 0, 1) (3, -1, 0, 1) (-1, 3, 0, 1) in clip space
+  	gl_Position = vec4(outUV * 2.0f - 1.0f, 0.0f, 1.0f);
+      // (Vulkan Flip-Y) OpenGL screen y-coordinate is opposite to texture y-coordinate
+      vTextureCoord = vec2(outUV.x, -outUV.y);
+  }
+  ```
+
+  上述得到的 clip space 下的顶点序列为 $(-1,-1),(3,-1),(-1,3)$ 在 Vulkan Flip-Y 坐标系中为逆时针方向，满足管线设定。但由于 Flip-Y 后的 Vulkan 坐标系的 Y 轴方向与 texture coordinate 的 Y 轴方向相反，因此 Quad 绘制的顶点坐标需要 Y 坐标取负才能作为 UV 坐标。 
+
+
+
 
 
 
@@ -42,3 +90,5 @@ Vulkan 中的数据格式有很多带有 ```SRGB```、```UNORM``` 和 ```SNORM``
 ## Reference
 
 <a name="[1]">[1]</a> https://zhuanlan.zhihu.com/p/66558476
+
+<a name=[2]>[2]</a> https://www.saschawillems.de/blog/2019/03/29/flipping-the-vulkan-viewport/
