--- a/text-notes/graphic basics/4. Importance Sample BRDF.md
+++ b/text-notes/graphic basics/4. Importance Sample BRDF.md
@@ -35,11 +35,42 @@ $$
 $$
 L_r=\int_{\Omega^+}L_i(\boldsymbol{l})f(\boldsymbol{l}, \boldsymbol{v}) \cos\theta_l \space d\boldsymbol{l}\approx\frac{1}{N}\sum\limits_{k=1}^N\frac{L_i(\boldsymbol{l}_k)f(\boldsymbol{l}_k,\boldsymbol{v})\cos\theta_{l_k}}{p(\boldsymbol{l}_k)} \tag{1} \label{BRDF MC}
 $$
-想要求上述积分，除了很多采样点之外，还需要知道 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$，而这个概率密度与微表面法线分布**有关**。
+想要求上述积分，除了很多采样点之外，还需要知道 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$，而这个概率密度的选取要尽量接近被积函数的分布，即采用重要性采样的思想。
 
-### 2. Microfacet BRDF
+### 2. 重要性采样 [[5]](#[5])
+在蒙特卡洛积分中，采样概率密度的选取能够影响到积分结果的方差。如果选取的分布接近被积函数的分布，那么蒙特卡洛积分的收敛速度会更快。例如 $\eqref{BRDF MC}$ 的被积函数，其中有一个 $\cos\theta_l$ 项，如果采样得到的样本 $\boldsymbol{l}_k$ 垂直于法线，即 $\cos\theta_{l_k}=0$，此时，被积函数值为0，因此这类采样点对积分结果无任何共享。
 
-这里只关注法线分布模型 NDF，微表面 BRDF 的详细细节请看 [[1]](#[1])。
+为了节省蒙特卡洛采样次数，应该避免采样到无用点，因此需要调整采样概率密度。当光源项与 BRDF 项未知时，使得采样概率密度 $p(\boldsymbol{l})$ 正比于 $\cos\theta_l$，即
+$$
+p(\boldsymbol{l}) = c\cdot \cos\theta_l \qquad \quad where\space c > 0
+$$
+我们还知道入射光方向分布在 hemisphere，因此概率密度在 hemisphere 范围内的积分为 1，有
+$$
+\begin{align}
+\int_{\Omega^+}p(\boldsymbol{l})\space d\omega_l &= \int_{\Omega^+} c\cdot \cos\theta_l\space d\omega_l \\
+&=c\cdot \int_0^{2\pi}\int_0^{\pi/2}\cos\theta_l\sin\theta_l\space d\theta_ld\phi_l \\
+&=c\cdot \pi \\
+&=1
+\end{align}
+$$
+因此 
+$$
+p(\boldsymbol{l}) = \frac{1}{\pi}\cdot \cos\theta_l
+$$
+因此经常称为 **cosine-weighted sample hemisphere**。
+
+而对于特殊光源、特殊 BRDF，可以得到被积函数不同的近似分布，使得采样分布接近被积函数的分布。下面即介绍不同微表面 BRDF 的重要性采样。
+
+### 3. Microfacet BRDF
+
+这里只关注法线分布模型 NDF，微表面 BRDF 的详细细节请看 [[1]](#[1])，定义如下
+$$
+\begin{align}
+f(\boldsymbol{l},\boldsymbol{v})&=\frac{F(\boldsymbol{l},\boldsymbol{v})\cdot G(\boldsymbol{l},\boldsymbol{v},\boldsymbol{h})\cdot D(\boldsymbol{h})}{4(\boldsymbol{n}\cdot \boldsymbol{l})(\boldsymbol{n}\cdot \boldsymbol{v})} \\
+&=\frac{F(\theta_d)\cdot G(\theta_l, \theta_v)\cdot D(\theta_h)}{4\cdot \cos\theta_l\cdot \cos\theta_v}
+\end{align}
+$$
+
 
 对于微表面分布函数，$D(\boldsymbol{h})$ 有几个重要性质：
 
@@ -59,9 +90,9 @@ $$
 \int_{\Omega^+} D(\boldsymbol{h}) \cos\theta_h \space d\boldsymbol{h} = 1 \tag{3} \label{NDF Projected Area}
 $$
 
+**因此蒙特卡洛积分重要性采样的概率密度要依据 $D(\boldsymbol{h}) \cos\theta_h$  设定**，但蒙特卡洛积分是对入射光方向 $\boldsymbol{l}$，而 $D(\boldsymbol{h}) \cos\theta_h$ 是微表面法线的概率密度。但计算 BRDF 只需要关注能够反射到观察方向的入射光方向即可，而反射过程与微表面法线具有反射定律的关系，可以根据此关系推导出入射光方向 $\boldsymbol{l}$ 的概率密度。下面介绍几种微表面分布函数，
 
-
-#### 2.1 Blinn Phong NDF
+#### 3.1 Blinn Phong NDF
 
 $$
 D_p(\boldsymbol{h})=\frac{\alpha_p+2}{2\pi}(\cos\theta_h)^{\alpha_p}
@@ -69,21 +100,21 @@ $$
 
 其中 $\alpha_p$ 表示表面的光滑程度，当为 $\infty$ 时，表示绝对光滑表面。该参数带来的视觉变换非常不线性，不便调控。 UE4 中使用映射 $\alpha_p=2\alpha^{-2}-2$ ，$\alpha$ 为 roughness。
 
-#### 2.2 Beckmann NDF
+#### 3.2 Beckmann NDF
 
 $$
 D_b(\boldsymbol{h})=\frac{1}{\pi\alpha^2(\cos\theta_h)^4}\cdot exp(\frac{\cos^2\theta_h-1}{\alpha^2\cos^2\theta_h})
 $$
 
-#### 2.3 GGX(Trowbridge-Reitz) NDF
+#### 3.3 GGX(Trowbridge-Reitz) NDF
 
 $$
 D_{GGX}(\boldsymbol{h})=\frac{\alpha^2}{\pi((\cos\theta_h)^2(\alpha^2-1)+1)^2}
 $$
 
-## 根据 NDF 得到蒙特卡洛积分的概率密度
+## 根据 NDF 得到蒙特卡洛积分的重要性采样概率密度
 
-求 $\eqref{BRDF MC}$ 中的积分，需要一个关于入射方向的概率密度函数 $p(\boldsymbol{l})$。$p(\boldsymbol{l})$ 无法直接获取，需要通过微表面法线概率密度函数得到。 因此第一步是先求得 $p(\boldsymbol{h})$。
+求 $\eqref{BRDF MC}$ 中的积分，需要一个关于入射方向的概率密度函数 $p(\boldsymbol{l})$。$p(\boldsymbol{l})$ 无法直接获取，需要通过微表面法线概率密度函数得到。 因此第一步是先求得微表面法线概率密度函数 $p(\boldsymbol{h})$。
 
 ### 1. NDF 到微表面法线 PDF、CDF
 
@@ -228,7 +259,7 @@ $$
   \end{cases} \tag{5}\label{GGX Sampled Microface Normal}
   $$
 
-### 3. 微表面法线概率密度函数到入射方向的概率密度
+### 3. 微表面法线概率密度函数到入射方向的概率密度（推导失败）
 
 首先思考一个问题：假设已知概率密度 $p_1(u,v)$，并且存在变换 $s=s(u,v),t=t(u,v)$ ，求概率密度 $p_2(s,t)$ 。
 
@@ -335,4 +366,6 @@ $$
 <a name="[3]">[3]</a> https://www.graphics.cornell.edu/~bjw/wardnotes.pdf
 
 <a name="[4]">[4]</a> [Jacobian Matrix](../Math/Jacobian Matrix.md)
+
+<a name="[5]">[5]</a> https://www.pbr-book.org/3ed-2018/Monte_Carlo_Integration/Importance_Sampling#sec:importance-sampling
 
