write notes about derivation of cosine-weight sampled function

--- a/text-notes/graphic basics/4. Importance Sample BRDF.md
+++ b/text-notes/graphic basics/4. Importance Sample BRDF.md
@@ -40,9 +40,9 @@ $$
 ### 2. 重要性采样 [[5]](#[5])
 在蒙特卡洛积分中，采样概率密度的选取能够影响到积分结果的方差。如果选取的分布接近被积函数的分布，那么蒙特卡洛积分的收敛速度会更快。例如 $\eqref{BRDF MC}$ 的被积函数，其中有一个 $\cos\theta_l$ 项，如果采样得到的样本 $\boldsymbol{l}_k$ 垂直于法线，即 $\cos\theta_{l_k}=0$，此时，被积函数值为0，因此这类采样点对积分结果无任何共享。
 
-为了节省蒙特卡洛采样次数，应该避免采样到无用点，因此需要调整采样概率密度。当光源项与 BRDF 项未知时，使得采样概率密度 $p(\boldsymbol{l})$ 正比于 $\cos\theta_l$，即
+为了节省蒙特卡洛采样次数，应该避免采样到无用点，因此需要调整采样概率密度。当光源项与 BRDF 项未知时，使得采样概率密度 $p(\boldsymbol{l})$ 正比于 $\cos\theta_l$，经常称为 **cosine-weighted sample hemisphere**。
 $$
-p(\boldsymbol{l}) = c\cdot \cos\theta_l \qquad \quad where\space c > 0
+p(\boldsymbol{l}) = c\propto \cos\theta_l \qquad \quad where\space c > 0
 $$
 我们还知道入射光方向分布在 hemisphere，因此概率密度在 hemisphere 范围内的积分为 1，有
 $$
@@ -53,13 +53,77 @@ $$
 &=1
 \end{align}
 $$
-因此 
+因此 $\Large c=\frac{1}{\pi}$，将入射方向 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$ 在**数值上**可按下式计算：
 $$
-p(\boldsymbol{l}) = \frac{1}{\pi}\cdot \cos\theta_l
+p(\boldsymbol{l})=\frac{1}{\pi}\cdot \cos\theta_l
 $$
-因此经常称为 **cosine-weighted sample hemisphere**。
 
-而对于特殊光源、特殊 BRDF，可以得到被积函数不同的近似分布，使得采样分布接近被积函数的分布。下面即介绍不同微表面 BRDF 的重要性采样。
+#### 2.1 采样过程
+
+实际的采样无法直接采样立体角，需要将立体角形式的概率密度转换到球坐标：
+$$
+p(\boldsymbol{l}) = p_{\boldsymbol{l}}(\phi_l,\theta_l) =\frac{1}{\pi}\cdot \cos\theta_l\cdot \sin\theta_l
+$$
+- 边缘概率密度
+
+$\phi_l$ 的边缘概率密度为
+$$
+\begin{align}
+p_{\boldsymbol{l}}(\phi_l)&= \int_0^{\frac{\pi}{2}} p_{\boldsymbol{l}}(\phi_l,\theta_l) \space d\theta_l \\
+&=\int_0^{\frac{\pi}{2}} \frac{1}{\pi}\cdot \cos\theta_l\cdot \sin\theta_l\space d\theta_l \\
+&=\frac{1}{2\pi}
+\end{align}
+$$
+$\theta_l$ 的边缘概率密度为
+$$
+\begin{align}
+p_{\boldsymbol{l}}(\theta_l)&=\int_0^{2\pi} p_{\boldsymbol{l}}(\phi_l,\theta_l) \space d\phi \\
+&=\int_0^{2\pi} \frac{1}{\pi}\cdot \cos\theta_l\cdot \sin\theta_l \space d\phi_l \\
+&=2\cdot\cos\theta_l\sin\theta_l
+\end{align}
+$$
+
+
+- 边缘概率分布
+
+$\phi_l$ 的边缘概率分布为
+$$
+\begin{align}
+P_{\boldsymbol{l}}(\phi_{l_k})&=\int_0^{\phi_{l_k}} p_{\boldsymbol{l}}(\phi_l) \space d\phi_l \\
+&=\int_0^{\phi_{l_k}} \frac{1}{2\pi} \space d\phi_l \\
+&=\frac{1}{2\pi}\cdot \phi_{l_k}
+\end{align}
+$$
+
+
+$\theta_l$ 的边缘概率分布为
+$$
+\begin{align}
+P_{\boldsymbol{l}}(\theta_{l_k})&=\int_0^{\theta_{l_k}} p_{\boldsymbol{l}}(\theta_l) \space d\theta_l \\
+&=\int_0^{\theta_{l_k}} 2\cdot\cos\theta_l\sin\theta_l \space d\theta_l \\
+&=1-\cos^2\theta_{l_k}
+\end{align}
+$$
+
+- 均匀采样变换到球坐标采样
+
+假设计算伪随机生成 $[0,1]\cross [0,1]$ 的随机数 $x,y$，作为球坐标 $(\phi_l,\theta_l)=(\phi_{l_k},\theta_{l_k})$ 的概率，可列
+$$
+\begin{cases}
+P_{\boldsymbol{l}}(\phi_{l_k})=\frac{1}{2\pi}\cdot \phi_{l_k}=x \\
+P_{\boldsymbol{l}}(\theta_{l_k})=1-\cos^2\theta_{l_k}=y
+\end{cases}
+$$
+因此有变换
+$$
+\begin{cases}
+\phi_{l_k}= 2\pi\cdot x\\
+\cos\theta_{l_k} = \sqrt{1-y}
+\end{cases}
+$$
+
+
+对于特殊光源、特殊 BRDF，可以得到被积函数不同的近似分布，使得采样分布接近被积函数的分布。下面即介绍不同微表面 BRDF 的重要性采样。
 
 ### 3. Microfacet BRDF
 
