write some documents about graphics notes

--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/6. Compute Shader 实现 Pyramid Algorithm.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/6. Compute Shader 实现 Pyramid Algorithm.md
@@ -32,6 +32,8 @@ gl_GlobalInvocationID*4+0, gl_GlobalInvocationID*4+1,
 gl_GlobalInvocationID*4+2, gl_GlobalInvocationID*4+3
 ```
 
+或者按照下述算法形式实现。
+
 #### 2-Levels
 
 输入层级划分为 $4\times 4$ tiles，local workgroup size 使用 4。一个输入 tile 可以划分为 4 个 $2\times 2$ blocks，每个 block 对应 $L+1$ 层的一个样本。因此每个 local workgroup 负责一个输入 tile，生成 4 个 $L+1$ 层级样本，4 个 $L+1$ 层级样本又可生成 1 个 $L+2$  层级样本。算法过程如下示意，
@@ -343,5 +345,22 @@ local workgroup 的每个 subtile 应用 2 levels 算法来生成 $L+1$、$L+2$ 
 
 为了能够继续使用 subgroup 特性，使用一个 subgroup 来生成最后两层。假设使用 ID 为 0~15 的 invocation，ID 用来索引 shared memory 中的样本。shared memory 中的数组分为四部分，0~3、4~7、8~11、12~15，每个部分包含 4 个 $L+3$ 层级样本。 `id == id & 0x000C` 的 invocation 负责收集 4 个 $L+3$ 层级样本，生成 1 个 $L+4$ 层级样本。最后 0 号 invocation 通过 `subgroupShuffleXor` 收集其他 3 个 $L+4$ 层级样本，生成最终的 1 个 L+5 层级样本。
 
+### 宽高为非 2 的次幂
 
+对于图像宽高不是 2 的次幂的情况，$L+1$ 层级的样本在 $L$ 层级对应的 block 可能是 $1\times 1$、$1\times 2$、$2\times 1$、$2\times $2、$2\times 3$、$3\times 2$、$3\times 3$ 等。在划分为 tile 计算之后层级样本时，某些样本会用到多次，如下述 $5 \times 5$ 大小的 mip level 生成 $2\times 2$ 大小的 mip level，其中数字表示对应样本被使用到的次数。
 
+```c++
++---+---+---+---+---+        +---------+---------+
+|   |   | 2 |   |   |        |         |         |
++---+---+---+---+---+        |         |         |
+|   |   | 2 |   |   |        |         |         |
++---+---+---+---+---+        |         |         |
+| 2 | 2 | 4 | 2 | 2 | =====> +---------+---------+ (each sample generated with 3x3 kernel)
++---+---+---+---+---+        |         |         |
+|   |   | 2 |   |   |        |         |         |
++---+---+---+---+---+        |         |         |
+|   |   | 2 |   |   |        |         |         |
++---+---+---+---+---+        +---------+---------+
+```
+
+这意味着，无法像前述 2 的次幂的算法那样，每个 workgroup 负责的输入 tile，不会和其他 workgroup 有任何交集。这种由非 2 的次幂引入的多次引用，会导致一些 workgroup 生成下一层级样本时， 也可能使用到其他 workgroup 生成的样本。为了提高并行性，去除不同 workgroup 之间的同步，可以推算出生成 $M$ 层级所需的输入层级的大小范围。在划分 workgroup 时，不同 workgroup 之间的输入 tile 允许有重叠部分。
