--- a/text-notes/pbrt/3.1 Ray-Triangle and Ray-bounding box Intersection.md
+++ b/text-notes/pbrt/3.1 Ray-Triangle and Ray-bounding box Intersection.md
@@ -30,9 +30,7 @@ $$\begin{align*} \mathbf{a}\times \mathbf{b}&=\begin{vmatrix}\mathbf{i} & \mathb
 
 重心坐标求解，如下图所示 $A_A,A_B,A_C$ 分别为划分的三个小三角形面积，重心坐标为
 
-$$\begin{cases} \alpha=\frac{A_A}{A_A+A_B+A_C} \\ \beta=\frac{A_B}{A_A+A_B+A_C} \\ \gamma=\frac{A_C}{A_A+A_B+A_C} \end{cases}$$                                                  <img src="Ray-Triangle Intersection.assets/image-20210501154257147.png" alt="image-20210501154257147" style="zoom:33%;" />
-
-
+$$\begin{cases} \alpha=\frac{A_A}{A_A+A_B+A_C} \\ \beta=\frac{A_B}{A_A+A_B+A_C} \\ \gamma=\frac{A_C}{A_A+A_B+A_C} \end{cases}$$                                                  <img src="Ray-Triangle Intersection.assets/image-20210501154257147.png" alt="image-20210501154257147" style="zoom: 25%;" />
 
 使用叉乘计算面积，有 $\begin{cases}A_A=\frac{1}{2}||\mathbf{SC}\times \mathbf{SB}|| \\ A_B=\frac{1}{2}||\mathbf{SC}\times \mathbf{SA}|| \\ A_C=\frac{1}{2}||\mathbf{SA}\times \mathbf{SB}||\end{cases}$
 
@@ -44,9 +42,7 @@ $$\begin{cases} \alpha=\frac{A_A}{A_A+A_B+A_C} \\ \beta=\frac{A_B}{A_A+A_B+A_C} 
 >
 > 一般使用简化方法，查看 Watertight Ray-Triangle Intersection 部分定义
 
-**重心坐标具有仿射不变性，即仿射变换前后重心坐标不变。**仿射变换是一个线性变换(旋绕、缩放、切变等)加上一个平移变换，变换前后的坐标维度不变。
-
-透视/正交投影将三维降为了二维，因此重心坐标会发生改变。也就是说，三维空间得到的重心坐标不能用于二维空间，反之亦然。
+**重心坐标具有仿射不变性，即仿射变换前后重心坐标不变。**仿射变换是一个线性变换(旋绕、缩放、切变等)加上一个平移变换，变换前后的坐标维度不变。透视投影属于非线性变换，重心坐标会发生改变。因此，三维空间得到的重心坐标不能用于透视投影的 clip 空间，反之亦然。
 
 ### 光线与三角形求交点
 
@@ -64,7 +60,7 @@ $$\begin{pmatrix} t \\ b_1\\b_2 \end{pmatrix}=\frac{1}{\mathbf{S_1}\cdot\mathbf{
 
 #### 2. Watertight Ray-Triangle Intersection
 
-**Key idea**: 构建一个以 ray 起点为原点，以 ray 方向为 $z$ 轴正方向的坐标系。将三角形变换到该坐标系，在该坐标系中进行求交。由于 ray 即为 $z$ 轴，因此，若有交点，则交点 $x,y$ 坐标必为 $0$。反之，如果三角形内部有一点 $x,y$ 坐标为 $0$ ，且该点在光线范围内，那么此点必为交点。
+**Key idea**: 构建一个以光线起点为原点，以光线方向为 $z$ 轴正方向的坐标系。将三角形变换到该坐标系，在该坐标系中进行求交。由于光线为 $z$ 轴，因此，若有交点，则交点 $x,y$ 坐标必为 $0$。反之，如果三角形内部有一点 $x,y$ 坐标为 $0$ ，且该点在光线范围内，那么此点必为交点。
 
 因此，三维空间的求交问题，降为了二维空间问题。我们忽略三角形顶点的 $z$ 坐标，判断 $(0,0)$ 点是否在三角形内部即可。
 
@@ -112,7 +108,7 @@ $$\mathbf{S}=\begin{pmatrix} 1&0&-\mathbf{d}_x/\mathbf{d}_z&0 \\ 0&1&-\mathbf{d}
 
 判断点 $P$ 是否在三角形内。如果 $P_0P_1\times P_0P$、$P_1P_2\times P_1P$、$P_2P_0\times P_2P$ 三个向量的方向相同，则 $P$ 位于三角形内部。图中 $\circ$、$\otimes$ 分别表示叉乘方向向外和向内，因此可得到图中 $P$ 点不在三角形内。
 
-如果直接应用上述方法，那么计算仍会设计三维坐标，第 (1) 步的转换就没有意义。这里我们简化一下问题，考虑图 1所示情况。我们所关注的叉乘方向有两种，一种位于三角形的左侧，一种位于三角形的右侧。**使用叉乘向量 $z$ 坐标的符号来区分这两种情况。**
+如果直接应用上述方法，那么计算仍会设计三维坐标，第 (1) 步的转换就没有意义。这里我们简化一下问题，考虑图 1 所示情况。我们所关注的叉乘方向有两种，一种位于三角形的左侧，一种位于三角形的右侧。**使用叉乘向量 $z$ 坐标的符号来区分这两种情况。**
 
 由叉乘性质(2.叉乘)可知，$(\mathbf{a}_x\mathbf{b}_y-\mathbf{a}_y\mathbf{b}_x)$ 决定叉乘方向 $z$ 坐标的符号，其中 $\mathbf{a},\mathbf{b}$ 分别为参与叉乘的第一和第二个向量。因此，我们只需要 $x,y$ 两个坐标即可判断点是否在三角形内。由此可定义，
 
@@ -146,24 +142,28 @@ Bounding box 可以看作是三个 slabs 组成，每个 slab 由一对对齐于
 
 光线与 Bounding box 求交算法步骤：算法开始有光线参数的有效区间设置，通常为 $(0,\infty)$。光线与每一个 slab 求交都可得到两个交点，排除掉有效区间之外的交点。可由剩下的交点进行一些比较(交点分为两类:入点和出点。求入点中的最大值，出点中的最小值)得到光线位于 Bounding box 内部的参数范围。如下图所示
 
-<img src="Ray-Triangle Intersection.assets/image-20210511101604079.png" alt="image-20210511101604079" style="zoom:50%;" />
+<img src="Ray-Triangle Intersection.assets/image-20210511101604079.png" alt="image-20210511101604079" style="zoom: 67%;" />
 
 求交点即解光线方程和平面方程组成的方程组，假设平面方程为 $ax+by+cz+d=0$，带入光线方程可列
 
-​				$$a(O+t\mathbf{d}_x)+b(O+t\mathbf{d}_y)+c(O+t\mathbf{d}_z)+d = 0$$
-
-解方程组：$t=\frac{-d-((a,b,c)\cdot O)}{((a,b,c)\cdot \mathbf{d})}$
-
+$$
+a(O+t\mathbf{d}_x)+b(O+t\mathbf{d}_y)+c(O+t\mathbf{d}_z)+d = 0 \\
+t=\frac{-d-((a,b,c)\cdot O)}{((a,b,c)\cdot \mathbf{d})}
+$$
 对于垂直于 $x$ 轴的 slab 的两个平面的法向量都为 $(1,0,0)$ ，并且分别过点 $(x_{min},0,0),(x_{max},0,0)$。代入可得
 
-​					$t=\frac{x_{min}-O_x}{\mathbf{d}_x}$ 或 $\frac{x_{max}-O_x}{\mathbf{d}_x}$
-
-我们需要从得到的所有交点中通过一系列比较得到光线位于 Bounding box 内部的参数范围，而进行这一步骤的前提是将交点区分为两类：入点和出点。所求交点为入点$t_{near}$还是出点$t_{far}$可由光线方向与平面法向量的关系分辨。由上述，**每个 slab 的法向量都默认定义为其对应的坐标轴的正向**，因此我们只需看光线方向的符号即可。
+$$
+t=\frac{x_{min}-O_x}{\mathbf{d}_x} \quad or \quad \frac{x_{max}-O_x}{\mathbf{d}_x}
+$$
+我们需要从得到的所有交点中通过一系列比较得到光线位于 Bounding box 内部的参数范围，而进行这一步骤的前提是将交点区分为两类：入点和出点。所求交点为入点 $t_{near}$ 还是出点 $t_{far}$ 可由光线方向与平面法向量的关系分辨。由上述，**每个 slab 的法向量都默认定义为其对应的坐标轴的正向**，因此我们只需看光线方向的符号即可。
 
 <img src="Ray-Triangle Intersection.assets/image-20210511105516454.png" alt="image-20210511105516454" style="zoom:50%;" />
 
 如上图所示，图中 $x_0,x_1$ 分别对应 $x_{min}, x_{max}$ ，可以看出当光线方向在 $x$ 维度为正(即与平面法向量符号相同)时，$x_{min}$ 平面的交点为入点，$x_{max}$ 平面的交点为出点。按此规则分别求出三个 slabs 的入点和出点，然后求入点中的最大值 ，出点中的最小值：
 
-​						$t_{min}=max\{t_{near}\}, t_{max}=min\{t_{far}\}$
+$$
+t_{min}=\max\{t_{near}\}, t_{max}=\min\{t_{far}\}
+$$
+
 
 如果 $t_{min}<t_{max}$ 则表示光线穿过了 Bounding Box，否则表示无交点。
