--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/6. Compute Shader 实现 Pyramid Algorithm.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/6. Compute Shader 实现 Pyramid Algorithm.md
@@ -1,5 +1,7 @@
 ### 使用 compute shader 生成 mipmap
 
+本文是参考 https://github.com/nvpro-samples/vk_compute_mipmaps 的算法复现。
+
 将输入层级记为 $L$，将 $L$ 的 2x2 样本区域生成一个样本则得到 $L+1$ 层级。下面介绍从 $L$ 到 $L+M$ 层级的生成算法，$M\in[1,6]$，算法输入为 $L$ 层级的大小为 $2^M\times 2^M$ 的 tiles。
 
 ### 宽高为 2 的幂次
