update some documents

--- a/text-notes/graphic basics/5. Ambient Occlusion.md
+++ b/text-notes/graphic basics/5. Ambient Occlusion.md
@@ -26,11 +26,11 @@ AO 的数学公式如下
 $$
 ao =\frac{\int_{\Omega^+} V(\boldsymbol{l})\cdot \cos\theta_l \space d\boldsymbol{l}}{\int_{\Omega^+} \cos\theta_l \space d\boldsymbol{l}}=\frac{\int_{\Omega^+} V(\boldsymbol{l})\cdot \cos\theta_l \space d\boldsymbol{l}}{\pi} \tag{2} \label{ao equation}
 $$
-对于 $\eqref{ao equation}$ 的分母项则需要使用蒙特卡洛积分来进行估计，假设入射光 $\boldsymbol{l}$ 的概率密度为 $p(\boldsymbol{l})$，分母积分为
+对于 $\eqref{ao equation}$ 的分子项则需要使用蒙特卡洛积分来进行估计，假设入射光 $\boldsymbol{l}$ 的概率密度为 $p(\boldsymbol{l})$，分子积分为
 $$
 \int_{\Omega^+} V(\boldsymbol{l})\cdot \cos\theta_l \space d\boldsymbol{l} = \frac{1}{N}\sum\limits_{k=1}^N \frac{V(\boldsymbol{l}_k)\cdot \cos\theta_{l_k}}{p(\boldsymbol{l}_k)}
 $$
-根据重要性采样思想，入射光 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$ 选取应正比于 $\cos\theta_l$ 即 cosine-weighted sample hemisphere，推导参考 [[1]](#[1])，有概率密度
+根据重要性采样思想，入射光 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$ 选取应正比于 $\cos\theta_l$ 即 cosine-weighted sample hemisphere，并且在 hemisphere 的积分为 1，推导参考 [[1]](#[1])，因此有概率密度
 $$
 p(\boldsymbol{l})=\frac{\cos\theta_l}{\pi}
 $$
