--- a/text-notes/pbrt/3.1 Ray-Triangle and Ray-bounding box Intersection.md
+++ b/text-notes/pbrt/3.1 Ray-Triangle and Ray-bounding box Intersection.md
@@ -138,19 +138,19 @@ $$\begin{cases} e_0(P)=	P_{0x}P_{1y}-P_{0y}P_{1x} \\  e_1(P)=P_{1x}P_{2y}-P_{1y}
 
 ### 光线与 bounding box 求交
 
-Bounding box 可以看作是三个 slabs 组成，每个 slab 由一对对齐于某一坐标轴的平行平面组成。因此 Bounding box 可由两个极端点定义 pMin$(x_{min},y_{min},z_{min})$ 和 pMax$(x_{max},y_{max},z_{max})$ 。为了求光线与 Bounding box 的交点，先求光线与这三个 slabs 的交点。由 slab 对齐坐标轴的特点，与 slab 的求交简单而高效。
+Bounding box 可以看作是三组 slab 组成，每组 slab 由一对对齐于某一坐标轴的平行平面组成。因此 Bounding box 可由两个极端点定义 pMin$(x_{min},y_{min},z_{min})$ 和 pMax$(x_{max},y_{max},z_{max})$ 。为了求光线与 Bounding box 的交点，先求光线与这三组 slabs 的交点。由于 slab 对齐坐标轴的特点，与 slab 的求交简单而高效。
 
-光线与 Bounding box 求交算法步骤：算法开始有光线参数的有效区间设置，通常为 $(0,\infty)$。光线与每一个 slab 求交都可得到两个交点，排除掉有效区间之外的交点。可由剩下的交点进行一些比较(交点分为两类:入点和出点。求入点中的最大值，出点中的最小值)得到光线位于 Bounding box 内部的参数范围。如下图所示
+光线与 Bounding box 求交算法步骤：算法开始有光线参数的有效区间设置，通常为 $(0,\infty)$。光线与每一组 slab 求交都可得到两个交点，排除掉有效区间之外的交点。可由剩下的交点进行一些比较(交点分为两类:入点和出点。求**入点中的最大值、出点中的最小值**，得到光线位于 Bounding box 内部的参数范围。如下图所示
 
 <img src="Ray-Triangle Intersection.assets/image-20210511101604079.png" alt="image-20210511101604079" style="zoom: 67%;" />
 
 求交点即解光线方程和平面方程组成的方程组，假设平面方程为 $ax+by+cz+d=0$，带入光线方程可列
 
 $$
-a(O+t\mathbf{d}_x)+b(O+t\mathbf{d}_y)+c(O+t\mathbf{d}_z)+d = 0 \\
+a(O_x+t\mathbf{d}_x)+b(O_y+t\mathbf{d}_y)+c(O_z+t\mathbf{d}_z)+d = 0 \\
 t=\frac{-d-((a,b,c)\cdot O)}{((a,b,c)\cdot \mathbf{d})}
 $$
-对于垂直于 $x$ 轴的 slab 的两个平面的法向量都为 $(1,0,0)$ ，并且分别过点 $(x_{min},0,0),(x_{max},0,0)$。代入可得
+对于垂直于 $x$ 轴的一组 slab 平面的法向量都为 $(1,0,0)$ ，并且分别过点 $(x_{min},0,0),(x_{max},0,0)$。代入可得
 
 $$
 t=\frac{x_{min}-O_x}{\mathbf{d}_x} \quad or \quad \frac{x_{max}-O_x}{\mathbf{d}_x}
